samples/_failures_safe/1761524093_4fe57d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_779ee4dd.c: In function ‘main’:
./samples/SAFE/__tmp_779ee4dd.c:160:9: error: expected declaration or statement at end of input
  160 |         buffer_free(&input_buf);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_779ee4dd.c:160:9: error: expected declaration or statement at end of input
